update newsletter option

--- a/IPSX/Flows/Register/Storyboard/Base.lproj/Register.storyboard
+++ b/IPSX/Flows/Register/Storyboard/Base.lproj/Register.storyboard
@@ -335,13 +335,13 @@
                                 <rect key="frame" x="45" y="159" width="284" height="50"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Subscribe to our mailing list to receive important IPSX updates" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4xW-Wg-bpA">
-                                        <rect key="frame" x="29" y="6.5" width="255" height="31.5"/>
+                                        <rect key="frame" x="28" y="6.5" width="256" height="31.5"/>
                                         <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="13"/>
                                         <color key="textColor" red="0.16470588235294117" green="0.16470588235294117" blue="0.16470588235294117" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vFo-e7-M1f" userLabel="Separator">
-                                        <rect key="frame" x="28" y="49" width="257" height="1"/>
+                                        <rect key="frame" x="28" y="49" width="256" height="1"/>
                                         <color key="backgroundColor" red="0.80784313725490198" green="0.83137254901960778" blue="0.85490196078431369" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     </view>
                                     <button opaque="NO" contentMode="scaleToFill" selected="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="n8t-oW-Gir">
@@ -360,7 +360,7 @@
                                 </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="trailing" secondItem="vFo-e7-M1f" secondAttribute="trailing" constant="-1" id="1Am-ug-nVx"/>
+                                    <constraint firstAttribute="trailing" secondItem="vFo-e7-M1f" secondAttribute="trailing" id="1Am-ug-nVx"/>
                                     <constraint firstItem="vFo-e7-M1f" firstAttribute="top" secondItem="n8t-oW-Gir" secondAttribute="bottom" constant="4" id="5DY-Ns-f2Y"/>
                                     <constraint firstAttribute="height" constant="50" id="5e6-fF-rek"/>
                                     <constraint firstItem="vFo-e7-M1f" firstAttribute="centerX" secondItem="4xW-Wg-bpA" secondAttribute="centerX" id="7p6-nR-5VJ"/>
