--- a/IPSX/Flows/Register/Storyboard/Base.lproj/Register.storyboard
+++ b/IPSX/Flows/Register/Storyboard/Base.lproj/Register.storyboard
@@ -6,7 +6,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
-        <capability name="Alignment constraints to the first baseline" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -335,7 +334,7 @@
                                 <rect key="frame" x="45" y="159" width="284" height="50"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Subscribe to our mailing list to receive important IPSX updates" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4xW-Wg-bpA">
-                                        <rect key="frame" x="28" y="6.5" width="256" height="31.5"/>
+                                        <rect key="frame" x="28" y="0.0" width="256" height="50.5"/>
                                         <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="13"/>
                                         <color key="textColor" red="0.16470588235294117" green="0.16470588235294117" blue="0.16470588235294117" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
@@ -367,16 +366,15 @@
                                     <constraint firstItem="vFo-e7-M1f" firstAttribute="leading" secondItem="ZLD-0e-kpc" secondAttribute="leading" constant="28" id="A6n-79-ckF"/>
                                     <constraint firstItem="n8t-oW-Gir" firstAttribute="top" secondItem="ZLD-0e-kpc" secondAttribute="top" id="AFg-LT-kty"/>
                                     <constraint firstItem="n8t-oW-Gir" firstAttribute="trailing" secondItem="4xW-Wg-bpA" secondAttribute="trailing" id="EgI-vJ-zTQ"/>
+                                    <constraint firstItem="4xW-Wg-bpA" firstAttribute="centerY" secondItem="ZLD-0e-kpc" secondAttribute="centerY" id="LeJ-DE-L1g"/>
                                     <constraint firstAttribute="bottom" secondItem="vFo-e7-M1f" secondAttribute="bottom" id="PXd-Ju-dh5"/>
-                                    <constraint firstItem="n8t-oW-Gir" firstAttribute="centerY" secondItem="4xW-Wg-bpA" secondAttribute="centerY" id="Zn6-MP-jho"/>
                                     <constraint firstAttribute="trailing" secondItem="n8t-oW-Gir" secondAttribute="trailing" id="mzv-E8-WVs"/>
                                     <constraint firstItem="n8t-oW-Gir" firstAttribute="leading" secondItem="ZLD-0e-kpc" secondAttribute="leading" id="uRa-XD-5Dg"/>
                                     <constraint firstItem="n8t-oW-Gir" firstAttribute="top" secondItem="4xW-Wg-bpA" secondAttribute="top" id="zWj-Ve-ywp"/>
-                                    <constraint firstItem="n8t-oW-Gir" firstAttribute="firstBaseline" secondItem="4xW-Wg-bpA" secondAttribute="firstBaseline" id="zmJ-Zz-QVY"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Vui-al-Ln8" userLabel="AgreeView">
-                                <rect key="frame" x="45" y="224" width="284" height="50"/>
+                                <rect key="frame" x="45" y="214" width="284" height="50"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1ea-PD-dt0">
                                         <rect key="frame" x="29" y="0.0" width="255" height="44"/>
@@ -433,11 +431,6 @@
                                             <action selector="termsAndConditionsAction:" destination="NZC-Rz-rhn" eventType="touchUpInside" id="BS8-Sd-y9q"/>
                                         </connections>
                                     </button>
-                                    <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="43c-yw-NHv" userLabel="Separator">
-                                        <rect key="frame" x="29" y="49" width="241" height="1"/>
-                                        <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
-                                        <color key="backgroundColor" red="0.80784313725490198" green="0.83137254901960778" blue="0.85490196078431369" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                    </view>
                                 </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
@@ -466,7 +459,7 @@
                             <constraint firstItem="zJr-kv-cZI" firstAttribute="centerX" secondItem="th7-gf-lwT" secondAttribute="centerX" id="Z2r-k0-mYr"/>
                             <constraint firstItem="hM3-yr-38q" firstAttribute="leading" secondItem="th7-gf-lwT" secondAttribute="leading" id="ZTu-Dv-QVT"/>
                             <constraint firstItem="th7-gf-lwT" firstAttribute="top" secondItem="Jyq-XU-knM" secondAttribute="top" constant="20" id="dfi-0X-TKz"/>
-                            <constraint firstItem="Vui-al-Ln8" firstAttribute="top" secondItem="ZLD-0e-kpc" secondAttribute="bottom" constant="15" id="iIQ-cn-kSl"/>
+                            <constraint firstItem="Vui-al-Ln8" firstAttribute="top" secondItem="ZLD-0e-kpc" secondAttribute="bottom" constant="5" id="iIQ-cn-kSl"/>
                             <constraint firstItem="7or-DF-D72" firstAttribute="top" secondItem="hM3-yr-38q" secondAttribute="bottom" id="lHQ-Cf-5kj"/>
                             <constraint firstItem="7or-DF-D72" firstAttribute="trailing" secondItem="hM3-yr-38q" secondAttribute="trailing" id="oRU-gw-fev"/>
                         </constraints>
