--- a/IPSX/Storyboard/Base.lproj/Main.storyboard
+++ b/IPSX/Storyboard/Base.lproj/Main.storyboard
@@ -729,6 +729,7 @@
                         <segue destination="RbI-qU-2hi" kind="relationship" relationship="viewControllers" id="Roy-su-mpx"/>
                         <segue destination="grr-34-nBj" kind="presentation" identifier="showLandingSegueID" id="TtS-cb-UUJ"/>
                         <segue destination="Iv2-r2-yiw" kind="show" identifier="showAddWalletSegueID" id="MxS-Wi-XAS"/>
+                        <segue destination="MA8-2d-JUe" kind="presentation" identifier="CollectLegalDetailsSegueID" id="Qsp-mz-FFn"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="USP-3f-e11" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -960,7 +961,15 @@
                 <viewControllerPlaceholder storyboardName="WalletAdd" id="Iv2-r2-yiw" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="UiR-L7-7GJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1262" y="16"/>
+            <point key="canvasLocation" x="1245" y="-35"/>
+        </scene>
+        <!--LegalDetails-->
+        <scene sceneID="JLH-ht-p9g">
+            <objects>
+                <viewControllerPlaceholder storyboardName="LegalDetails" id="MA8-2d-JUe" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="S2f-bN-vDR" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1255" y="58"/>
         </scene>
         <!--Landing-->
         <scene sceneID="MA1-Jg-3H6">
@@ -1698,7 +1707,7 @@
         <image name="locked" width="8" height="10"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="fqj-8c-i0g"/>
+        <segue reference="TtS-cb-UUJ"/>
         <segue reference="eg6-mz-aaC"/>
     </inferredMetricsTieBreakers>
 </document>
