Update edit profile controller to support legal state

--- a/IPSX/Flows/Register/Storyboard/LegalDetails.storyboard
+++ b/IPSX/Flows/Register/Storyboard/LegalDetails.storyboard
@@ -305,9 +305,8 @@
                                             <action selector="closeButtonAction:" destination="S47-Bd-0BS" eventType="touchUpInside" id="1se-Ty-uge"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vBW-oK-kA0">
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vBW-oK-kA0">
                                         <rect key="frame" x="329" y="56" width="36" height="33"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <state key="normal" title="Next">
                                             <color key="titleColor" red="0.16862745100000001" green="0.51372549020000002" blue="0.65499997139999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -324,6 +323,8 @@
                                 <constraints>
                                     <constraint firstItem="2NJ-hK-34g" firstAttribute="leading" secondItem="ngT-kh-9kT" secondAttribute="leading" id="0qm-LQ-QtH"/>
                                     <constraint firstAttribute="bottom" secondItem="2NJ-hK-34g" secondAttribute="bottom" id="5vL-Mq-16c"/>
+                                    <constraint firstItem="vBW-oK-kA0" firstAttribute="top" secondItem="h2e-ND-lWG" secondAttribute="bottom" constant="-26" id="UrL-to-wNQ"/>
+                                    <constraint firstAttribute="trailing" secondItem="vBW-oK-kA0" secondAttribute="trailing" constant="10" id="VgE-av-TuS"/>
                                     <constraint firstItem="h2e-ND-lWG" firstAttribute="centerX" secondItem="ngT-kh-9kT" secondAttribute="centerX" id="b84-Px-2rj"/>
                                     <constraint firstItem="h2e-ND-lWG" firstAttribute="centerY" secondItem="2NJ-hK-34g" secondAttribute="centerY" id="d9F-1f-AUP"/>
                                     <constraint firstAttribute="height" constant="94" id="tbe-gT-3O7"/>
