--- a/IPSX/Flows/Register/Storyboard/LegalDetails.storyboard
+++ b/IPSX/Flows/Register/Storyboard/LegalDetails.storyboard
@@ -311,6 +311,9 @@
                                         <state key="normal" title="Next">
                                             <color key="titleColor" red="0.16862745100000001" green="0.51372549020000002" blue="0.65499997139999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         </state>
+                                        <state key="disabled">
+                                            <color key="titleColor" red="0.53333333329999999" green="0.53333333329999999" blue="0.53333333329999999" alpha="1" colorSpace="calibratedRGB"/>
+                                        </state>
                                         <connections>
                                             <segue destination="5A6-QR-psk" kind="show" identifier="NextSegueID" id="Fun-Ig-LN3"/>
                                         </connections>
@@ -360,6 +363,7 @@
                         <outlet property="addressRTextField" destination="kxH-ji-c9l" id="Co1-jg-LWM"/>
                         <outlet property="countryRTextField" destination="w6V-0G-k6x" id="U59-NA-hXt"/>
                         <outlet property="nameRTextField" destination="Og0-8h-L5k" id="nOw-BE-Gd0"/>
+                        <outlet property="nextButton" destination="vBW-oK-kA0" id="3aK-vR-cX9"/>
                         <outlet property="regNumberRTextField" destination="AHI-zR-fSn" id="1s4-5c-81u"/>
                         <outlet property="vatRTextField" destination="Eoe-l6-OtT" id="Tie-zq-Uah"/>
                     </connections>
